samples/_failures_safe/1761041905_d518c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09a61066.c: In function ‘main’:
./samples/SAFE/__tmp_09a61066.c:151:16: error: missing terminating " character
  151 |         printf("Comp
      |                ^~~~~
./samples/SAFE/__tmp_09a61066.c:151:9: error: expected expression at end of input
  151 |         printf("Comp
      |         ^~~~~~
./samples/SAFE/__tmp_09a61066.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09a61066.c:151:9: error: expected declaration or statement at end of input
